# lguf-brightness

./: CMakeLists.txt  README.md  main.cpp
cmake/: Findlibusb-1.0.cmake
lguf-brightness.xcodeproj/: project.pbxproj
lguf-brightness.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
